lib/src/compiler/tests/testdata/errors/76.out
error: syntax error
 --> line:1:28
  |
1 | rule test { condition: 4 + }
  |                            ^ expected expression
  |